<resources>
    <string name="app_name">SmartPillCare</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="save_patient">Save Patient</string>
    <string name="condition">Condition</string>
    <string name="contact">Contact</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="save_medicine">Save Medicine</string>
    <string name="minute">Minute</string>
    <string name="dosage">Dosage</string>
    <string name="refill_alert">Refill Alert</string>
    <string name="stock_count">Stock Count</string>
    <string name="hour_24h">Hour (24h)</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="date_dd_mm_yyyy">Date (DD/MM/YYYY)</string>
    <string name="save_appointment">Save Appointment</string>
    <string name="notes">Notes</string>
    <string name="time_hh_mm">Time (HH:MM)</string>
    <string name="add_patient">Add Patient</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_smartpillcare">Welcome to SmartPillCare</string>
    <string name="select_language_for_reminders">Select Language for Reminders</string>
    <string name="mark_as_taken">Mark as Taken</string>
    <string name="language_english">Language (English / தமிழ்)</string>
    <string name="appointment">Appointment</string>
    <string name="medicine_details">Medicine Details</string>
    <string name="smart_pill_care">Smart Pill Care</string>
    <string name="patient_details">Patient Details</string>
    <string name="enable_sms_permission">Enable SMS Permission</string>
    <string name="user_image">User Image</string>
    <string name="medicine">Medicine</string>
    <string name="patient">Patient</string>
    <string name="patient_name">Patient Name</string>
    <string name="select_a_date_to_see_appointment">Select a date to see appointment</string>
    <string name="app_logo">App Logo</string>
    <string name="select_a_date">Select a date</string>
    <string name="selected_date">Selected Date:</string>
    <string name="smart_appointment">Smart Appointment</string>
    <string name="manage_patients_medicines_and_appointments_smartly_with_reminders">manage patients medicines and appointments smartly with reminders</string>
    <string name="Appointment">Appointment\n</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="user">User</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer\n</string>
    <string name="medicine_settings">Medicine Settings</string>
    <string name="Profile">Profile</string>
    <string name="light_mode_on">Light Mode ON</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="patient_contact">patient Contact:</string>
    <string name="patient_condition">patient Condition:</string>
    <string name="user_name">User Name:</string>
    <string name="patient_age">Patient Age:</string>
    <string name="upcoming_appointment">🌟 Upcoming Appointment</string>
    <string name="doctor">Doctor: -</string>
    <string name="date">Date: -</string>
    <string name="time">Time: -</string>
    <string name="ask_about_your_health">Ask about your health...</string>
    <string name="ask">Ask</string>
    <string name="ask_health_assistant">Ask Health Assistant</string>

</resources>
