<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etDoctor"
        android:autofillHints=""
        android:hint="@string/doctor_name"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etDate"
        android:autofillHints=""
        android:hint="@string/date_dd_mm_yyyy"
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etTime"
        android:autofillHints=""
        android:hint="@string/time_hh_mm"
        android:inputType="time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etNotes"
        android:autofillHints=""
        android:hint="@string/notes"
        android:inputType="textCapSentences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSaveApp"
        android:text="@string/save_appointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>
