<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etName"
            android:autofillHints=""
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etAge"
            android:autofillHints=""
            android:hint="@string/age"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etContact"
            android:autofillHints=""
            android:hint="@string/contact"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etCondition"
            android:autofillHints=""
            android:hint="@string/condition"
            android:inputType="textCapSentences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnSavePatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_patient" />

    </LinearLayout>
</ScrollView>
