<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lottie="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center_horizontal">

    <!-- Lottie Animation at the top -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieLogin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        lottie:lottie_autoPlay="true"
        lottie:lottie_loop="true"
        lottie:lottie_rawRes="@raw/login" />

    <!-- Email Field -->
    <EditText
        android:id="@+id/etEmail"
        android:autofillHints="email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Password Field -->
    <EditText
        android:id="@+id/etPassword"
        android:autofillHints="Password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Signup Button -->
    <Button
        android:id="@+id/btnSignup"
        android:text="@string/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>

