<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lottie="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/welcome_to_smartpillcare"
        android:textSize="27sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"/>

    <!-- Lottie Animation -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieLogin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        lottie:lottie_autoPlay="true"
        lottie:lottie_loop="true"
        lottie:lottie_rawRes="@raw/medical" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="40dp"
        android:text="@string/manage_patients_medicines_and_appointments_smartly_with_reminders"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnGetStarted"
        android:text="@string/get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
